--- a/src/input.css
+++ b/src/input.css
@@ -6,3 +6,14 @@ body{
     font-size: 16px;
     line-height: 1.5;
 }
+
+.container{
+    width: 98%;
+    margin: auto;
+}
+
+.text-stroke-white {
+    --tw-text-opacity: 1;
+    color: rgb(2 6 23 / var(--tw-text-opacity));
+    text-shadow: -.5px -.5px 0 #fff, .5px -.5px 0 #fff, -.5px .5px 0 #fff, .5px .5px 0 #fff;
+}
