--- a/src/output.css
+++ b/src/output.css
@@ -6,15 +6,17 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-red-300: oklch(0.808 0.114 19.571);
     --color-red-400: oklch(0.704 0.191 22.216);
     --color-red-500: oklch(0.637 0.237 25.331);
-    --color-red-700: oklch(0.505 0.213 27.518);
-    --color-red-800: oklch(0.444 0.177 26.899);
+    --color-amber-900: oklch(0.414 0.112 45.904);
     --color-rose-300: oklch(0.81 0.117 11.638);
     --color-gray-400: oklch(0.707 0.022 261.325);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
+    --text-sm: 0.875rem;
+    --text-sm--line-height: calc(1.25 / 0.875);
     --text-base: 1rem;
     --text-base--line-height: calc(1.5 / 1);
     --text-lg: 1.125rem;
@@ -25,6 +27,7 @@
     --radius-md: 0.375rem;
     --radius-2xl: 1rem;
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
+    --blur-lg: 16px;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
@@ -192,14 +195,29 @@
   .absolute {
     position: absolute;
   }
+  .fixed {
+    position: fixed;
+  }
   .relative {
     position: relative;
   }
   .inset-x-0 {
     inset-inline: calc(var(--spacing) * 0);
   }
+  .top-12 {
+    top: calc(var(--spacing) * 12);
+  }
+  .right-0 {
+    right: calc(var(--spacing) * 0);
+  }
   .-bottom-\[1px\] {
     bottom: calc(1px * -1);
+  }
+  .left-0 {
+    left: calc(var(--spacing) * 0);
+  }
+  .z-50 {
+    z-index: 50;
   }
   .container {
     width: 100%;
@@ -228,17 +246,35 @@
   .-mt-25 {
     margin-top: calc(var(--spacing) * -25);
   }
-  .mt-10 {
-    margin-top: calc(var(--spacing) * 10);
+  .mt-\[10vh\] {
+    margin-top: 10vh;
   }
   .mt-\[15vh\] {
     margin-top: 15vh;
   }
-  .mt-\[20vh\] {
-    margin-top: 20vh;
+  .mt-\[17vh\] {
+    margin-top: 17vh;
+  }
+  .mt-\[40vh\] {
+    margin-top: 40vh;
   }
   .mt-\[50vh\] {
     margin-top: 50vh;
+  }
+  .mt-\[70vh\] {
+    margin-top: 70vh;
+  }
+  .mt-\[80vh\] {
+    margin-top: 80vh;
+  }
+  .mt-\[100vh\] {
+    margin-top: 100vh;
+  }
+  .mt-\[170vh\] {
+    margin-top: 170vh;
+  }
+  .mt-\[1000vh\] {
+    margin-top: 1000vh;
   }
   .mr-2 {
     margin-right: calc(var(--spacing) * 2);
@@ -249,29 +285,14 @@
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
   }
-  .mb-5 {
-    margin-bottom: calc(var(--spacing) * 5);
-  }
-  .mb-6 {
-    margin-bottom: calc(var(--spacing) * 6);
-  }
-  .mb-7 {
-    margin-bottom: calc(var(--spacing) * 7);
-  }
   .mb-8 {
     margin-bottom: calc(var(--spacing) * 8);
-  }
-  .mb-10 {
-    margin-bottom: calc(var(--spacing) * 10);
-  }
-  .mb-\[2vh\] {
-    margin-bottom: 2vh;
   }
   .mb-\[4vh\] {
     margin-bottom: 4vh;
   }
-  .mb-\[10vh\] {
-    margin-bottom: 10vh;
+  .mb-\[30vh\] {
+    margin-bottom: 30vh;
   }
   .mb-\[50vh\] {
     margin-bottom: 50vh;
@@ -279,20 +300,8 @@
   .ml-1 {
     margin-left: calc(var(--spacing) * 1);
   }
-  .ml-10 {
-    margin-left: calc(var(--spacing) * 10);
-  }
-  .ml-\[10vw\] {
-    margin-left: 10vw;
-  }
-  .ml-\[12vw\] {
-    margin-left: 12vw;
-  }
   .ml-\[15vw\] {
     margin-left: 15vw;
-  }
-  .ml-\[20vw\] {
-    margin-left: 20vw;
   }
   .ml-\[32vw\] {
     margin-left: 32vw;
@@ -324,9 +333,6 @@
   .h-7 {
     height: calc(var(--spacing) * 7);
   }
-  .h-\[10vh\] {
-    height: 10vh;
-  }
   .w-3 {
     width: calc(var(--spacing) * 3);
   }
@@ -356,12 +362,6 @@
   }
   .w-\[40\%\] {
     width: 40%;
-  }
-  .w-\[50\%\] {
-    width: 50%;
-  }
-  .w-\[60\%\] {
-    width: 60%;
   }
   .w-\[70\%\] {
     width: 70%;
@@ -393,6 +393,9 @@
   .overflow-hidden {
     overflow: hidden;
   }
+  .overflow-x-hidden {
+    overflow-x: hidden;
+  }
   .rounded-2xl {
     border-radius: var(--radius-2xl);
   }
@@ -406,13 +409,17 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .border-2 {
-    border-style: var(--tw-border-style);
-    border-width: 2px;
-  }
   .border-\[0\.1px\] {
     border-style: var(--tw-border-style);
     border-width: 0.1px;
+  }
+  .border-\[0\.5px\] {
+    border-style: var(--tw-border-style);
+    border-width: 0.5px;
+  }
+  .border-\[1px\] {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
   }
   .border-b-0 {
     border-bottom-style: var(--tw-border-style);
@@ -434,6 +441,15 @@
   .border-red-400\/30 {
     border-color: color-mix(in oklab, var(--color-red-400) 30%, transparent);
   }
+  .border-t-red-300 {
+    border-top-color: var(--color-red-300);
+  }
+  .border-r-red-300 {
+    border-right-color: var(--color-red-300);
+  }
+  .border-l-red-500 {
+    border-left-color: var(--color-red-500);
+  }
   .bg-\[\#999\] {
     background-color: #999;
   }
@@ -442,6 +458,12 @@
   }
   .bg-\[rgba\(2\,3\,23\,1\)\] {
     background-color: rgba(2,3,23,1);
+  }
+  .bg-black {
+    background-color: var(--color-black);
+  }
+  .bg-black\/5 {
+    background-color: color-mix(in oklab, var(--color-black) 5%, transparent);
   }
   .bg-gradient-to-r {
     --tw-gradient-position: to right in oklab;
@@ -492,21 +514,17 @@
     font-size: var(--text-base);
     line-height: var(--tw-leading, var(--text-base--line-height));
   }
-  .text-base\/6 {
-    font-size: var(--text-base);
-    line-height: calc(var(--spacing) * 6);
-  }
   .text-base\/7 {
     font-size: var(--text-base);
     line-height: calc(var(--spacing) * 7);
   }
-  .text-base\/8 {
-    font-size: var(--text-base);
-    line-height: calc(var(--spacing) * 8);
-  }
   .text-lg {
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
+  }
+  .text-sm {
+    font-size: var(--text-sm);
+    line-height: var(--tw-leading, var(--text-sm--line-height));
   }
   .font-black {
     --tw-font-weight: var(--font-weight-black);
@@ -515,14 +533,14 @@
   .text-\[\#b90025\] {
     color: #b90025;
   }
-  .text-black {
-    color: var(--color-black);
+  .text-amber-900 {
+    color: var(--color-amber-900);
   }
   .text-gray-400 {
     color: var(--color-gray-400);
   }
-  .text-transparent {
-    color: transparent;
+  .text-red-500 {
+    color: var(--color-red-500);
   }
   .text-white {
     color: var(--color-white);
@@ -537,6 +555,15 @@
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
   }
+  .backdrop-blur-lg {
+    --tw-backdrop-blur: blur(var(--blur-lg));
+    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+  }
+  .backdrop-filter {
+    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+  }
   .transition {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter;
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
@@ -550,9 +577,6 @@
     --tw-ease: var(--ease-in-out);
     transition-timing-function: var(--ease-in-out);
   }
-  .\[-webkit-text-stroke\:1px_\#d1d5dc\] {
-    -webkit-text-stroke: 1px #d1d5dc;
-  }
   .hover\:cursor-pointer {
     &:hover {
       @media (hover: hover) {
@@ -560,10 +584,10 @@
       }
     }
   }
-  .hover\:border-red-400\/65 {
+  .hover\:border-red-400 {
     &:hover {
       @media (hover: hover) {
-        border-color: color-mix(in oklab, var(--color-red-400) 65%, transparent);
+        border-color: var(--color-red-400);
       }
     }
   }
@@ -571,27 +595,6 @@
     &:hover {
       @media (hover: hover) {
         border-color: color-mix(in oklab, var(--color-red-400) 75%, transparent);
-      }
-    }
-  }
-  .hover\:border-red-500\/65 {
-    &:hover {
-      @media (hover: hover) {
-        border-color: color-mix(in oklab, var(--color-red-500) 65%, transparent);
-      }
-    }
-  }
-  .hover\:border-red-700\/65 {
-    &:hover {
-      @media (hover: hover) {
-        border-color: color-mix(in oklab, var(--color-red-700) 65%, transparent);
-      }
-    }
-  }
-  .hover\:border-red-800\/65 {
-    &:hover {
-      @media (hover: hover) {
-        border-color: color-mix(in oklab, var(--color-red-800) 65%, transparent);
       }
     }
   }
@@ -610,6 +613,16 @@ body {
   --tw-text-opacity: 1;
   color: rgb(2 6 23 / var(--tw-text-opacity));
   text-shadow: -.5px -.5px 0 #fff, .5px -.5px 0 #fff, -.5px .5px 0 #fff, .5px .5px 0 #fff;
+}
+.box {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: all 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.box.show {
+  opacity: 1;
+  transform: translateY(0);
+  transition: all 0.8s ease-in-out;
 }
 @property --tw-rotate-x {
   syntax: "*";
@@ -691,6 +704,42 @@ body {
   syntax: "*";
   inherits: false;
   initial-value: solid;
+}
+@property --tw-backdrop-blur {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-brightness {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-contrast {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-grayscale {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-hue-rotate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-invert {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-opacity {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-saturate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-sepia {
+  syntax: "*";
+  inherits: false;
 }
 @property --tw-duration {
   syntax: "*";
