--- a/src/input.css
+++ b/src/input.css
@@ -1,7 +1,6 @@
 @import "tailwindcss";
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
-
 html{
     scroll-behavior: smooth;
 }
@@ -239,4 +238,16 @@ body{
     background-size: 200% 100%;
     animation: wave 2s infinite ease-in-out;
     border-radius: 10px;
+}
+
+@media (max-width: 375px) and (min-width: 320px) {
+    .light {
+        margin-right: 3.5vw;
+    }
+}
+
+@media (max-width: 425px) and (min-width: 375px) {
+    .light {
+        margin-right: 3.5vw;
+    }
 }
