--- a/src/input.css
+++ b/src/input.css
@@ -257,3 +257,14 @@ body{
         margin-left: 31.5vw;
     }
 }
+
+@media (max-width:500px) and (min-width: 425px) {
+    .light {
+        margin-right: 3.5vw;
+    }
+
+    .contact-btn {
+        margin-left: 31.5vw;
+    }
+    
+}
